--- a/public/index.html
+++ b/public/index.html
@@ -375,7 +375,12 @@
         </div>
       </footer>
     </div><a class="btn-to-top" href="#" id="to-top"><i class="fas fa-arrow-up"></i></a>
-    <div class="preloader" id="preloader"></div>
+    <div class="preloader" id="preloader">
+      <div class="preloader-arc" style="--value: 0;"></div>
+      <div class="preloader-arc" style="--value: 1;"></div>
+      <div class="preloader-arc" style="--value: 2;"></div>
+      <div class="preloader-arc" style="--value: 3;"></div>
+    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
